--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "@trpc/client": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@types/cors": "^2.8.17",
@@ -18,6 +19,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
